MDEV-4890 Valgrind warnings on shutdown on a build with openSSL