sql/slave.cc
@@ -2854,6 +2854,7 @@ err:
 
   DBUG_LEAVE;                                   // Must match DBUG_ENTER()
   my_thread_end();
+  ERR_remove_state(0);
   pthread_exit(0);
   return 0;                                     // Avoid compiler warnings
 }
@@ -3250,6 +3251,7 @@ the slave SQL thread with \"SLAVE START\". We stopped at log \
 
   DBUG_LEAVE;                                   // Must match DBUG_ENTER()
   my_thread_end();
+  ERR_remove_state(0);
   pthread_exit(0);
   return 0;                                     // Avoid compiler warnings
 }
